--- a/src/main/resources/com/vertex/vos/AccountingContent.fxml
+++ b/src/main/resources/com/vertex/vos/AccountingContent.fxml
@@ -124,7 +124,7 @@
                                   </DropShadow>
                               </effect>
                           </VBox>
-                          <VBox fx:id="openCreditMemo" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                          <VBox fx:id="openSupplierCreditMemo" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                               <children>
                                   <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
                                       <children>
@@ -133,7 +133,7 @@
                                                   <Image url="@assets/icons/Credit Control.png" />
                                               </image>
                                           </ImageView>
-                                          <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Credit Memo" wrapText="true" />
+                                          <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Supplier Credit Memo" wrapText="true" />
                                       </children>
                                   </HBox>
                               </children>
@@ -148,7 +148,7 @@
                                   </DropShadow>
                               </effect>
                           </VBox>
-                          <VBox fx:id="openDebitMemo" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                          <VBox fx:id="openSupplierDebitMemo" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                               <children>
                                   <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
                                       <children>
@@ -157,7 +157,7 @@
                                                   <Image url="@assets/icons/Card Exchange.png" />
                                               </image>
                                           </ImageView>
-                                          <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Debit Memo" wrapText="true" />
+                                          <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Supplier Debit Memo" wrapText="true" />
                                       </children>
                                   </HBox>
                               </children>
@@ -230,6 +230,54 @@
                                  </image>
                               </ImageView>
                               <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Collection" wrapText="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
+                  <VBox fx:id="openCustomerCreditMemo" alignment="CENTER_LEFT" layoutX="224.0" layoutY="142.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Credit Control.png" />
+                                 </image>
+                              </ImageView>
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Customer Credit Memo" wrapText="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
+                  <VBox fx:id="openCustomerDebitMemo" alignment="CENTER_LEFT" layoutX="438.0" layoutY="142.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Card Exchange.png" />
+                                 </image>
+                              </ImageView>
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Customer Debit Memo" wrapText="true" />
                            </children>
                         </HBox>
                      </children>
