--- a/src/main/resources/com/vertex/vos/assets/table.css
+++ b/src/main/resources/com/vertex/vos/assets/table.css
@@ -89,3 +89,9 @@
 .align-right {
   -fx-alignment: CENTER-RIGHT;
 }
+.align-center{
+  -fx-alignment: CENTER;
+}
+.align-left {
+  -fx-alignment: CENTER-LEFT;
+}
