--- a/src/main/resources/com/vertex/vos/CollectionForm.fxml
+++ b/src/main/resources/com/vertex/vos/CollectionForm.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
+<BorderPane fx:id="collectionPane" prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -82,7 +82,7 @@
                            <tabs>
                               <Tab fx:id="salesInvoiceTab" text="Sales Transactions">
                                  <content>
-                                    <TableView fx:id="salesInvoiceTable">
+                                    <TableView fx:id="salesInvoiceTable" stylesheets="@assets/table.css">
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
@@ -142,9 +142,9 @@
                                                 <TableColumn fx:id="customerCodeColRet" prefWidth="75.0" text="Code" />
                                              </columns>
                                           </TableColumn>
-                                          <TableColumn prefWidth="75.0" text="Return Date" />
-                                          <TableColumn prefWidth="75.0" text="Remarks" />
-                                          <TableColumn prefWidth="75.0" text="Amount" />
+                                          <TableColumn fx:id="returnDateCol" prefWidth="75.0" text="Return Date" />
+                                          <TableColumn fx:id="returnRemarksCol" prefWidth="75.0" text="Remarks" />
+                                          <TableColumn fx:id="returnAmountCol" prefWidth="75.0" text="Amount" />
                                        </columns>
                                     </TableView>
                                  </content>
@@ -159,7 +159,6 @@
                                 <buttons>
                                   <Button fx:id="addInvoiceButton" disable="true" mnemonicParsing="false" text="Add Invoice" />
                                     <Button fx:id="addReturnsButton" disable="true" layoutX="150.0" layoutY="10.0" mnemonicParsing="false" text="Add Returns" />
-                                    <Button fx:id="addMemoButton" disable="true" layoutX="155.0" layoutY="10.0" mnemonicParsing="false" text="Add Memo" />
                                 </buttons>
                               </ButtonBar>
                            </children>
@@ -220,19 +219,22 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label fx:id="transactionBalance" text="Total" GridPane.columnIndex="1" />
-                        <Label fx:id="paymentBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="collectionBalance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="paymentBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="collectionBalance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                         <Label text="Total Payables " />
-                        <Label text="Total Collection" GridPane.rowIndex="3" />
-                        <Label text="Balance" GridPane.rowIndex="4" />
+                        <Label text="Total Collected Amount" GridPane.rowIndex="2" />
+                        <Label text="Balance" GridPane.rowIndex="5" />
                         <Label text="Total Paid Amount" GridPane.rowIndex="1" />
                         <Label fx:id="paidBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label prefWidth="197.0" text="Total Adjustment Amount" GridPane.rowIndex="2" />
-                        <Label fx:id="totalAdjustmentAmount" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label prefWidth="197.0" text="Total Adjustment Amount" GridPane.rowIndex="3" />
+                        <Label fx:id="totalAdjustmentAmount" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Total Collection Amount" GridPane.rowIndex="4" />
+                        <Label fx:id="collectionAmount" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
                </right>
