--- a/src/main/resources/com/vertex/vos/PhysicalInventory.fxml
+++ b/src/main/resources/com/vertex/vos/PhysicalInventory.fxml
@@ -15,60 +15,61 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PhysicalInventoryController">
+<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PhysicalInventoryController">
     <stylesheets>
         <URL value="@assets/global.css" />
         <URL value="@assets/table.css" />
         <URL value="@assets/style.css" />
     </stylesheets>
     <center>
-      <BorderPane BorderPane.alignment="CENTER">
-         <center>
-              <TableView fx:id="physicalInventoryDetailsTableView" editable="true" stylesheets="@assets/table.css">
-                  <columns>
-                      <TableColumn prefWidth="75.0" text="Product">
-                          <columns>
-                              <TableColumn fx:id="codeCol" prefWidth="75.0" text="Code" />
-                              <TableColumn fx:id="nameCol" prefWidth="75.0" text="Name" />
-                              <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
-                              <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
-                              <TableColumn fx:id="breakdownCol" prefWidth="75.0" text="Packaging" />
-                          </columns>
-                      </TableColumn>
-                      <TableColumn prefWidth="75.0" text="Findings">
-                          <columns>
-                              <TableColumn fx:id="sysCountCol" prefWidth="75.0" style="-fx-background-color: #2E5077; -fx-text-fill: #FFFFFF;" text="System Count" />
-                              <TableColumn fx:id="physCountCol" prefWidth="75.0" style="-fx-background-color: #79D7BE;-fx-text-fill: #FFFFFF;" text="Physical Count" />
-                              <TableColumn fx:id="varianceCol" prefWidth="75.0" style="-fx-background-color: #4DA1A9;-fx-text-fill: #FFFFFF;" text="Variance" />
-                              <TableColumn fx:id="differenceCol" prefWidth="75.0" style="-fx-background-color: #DDA853;-fx-text-fill: #FFFFFF;" text="Difference Cost" />
-                              <TableColumn fx:id="statusCol" prefWidth="75.0" text="Remarks" />
-                          </columns>
-                      </TableColumn>
-                  </columns>
-                  <columnResizePolicy>
-                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                  </columnResizePolicy>
-              </TableView>
-         </center>
-         <top>
-            <HBox style="-fx-spacing: 10;" BorderPane.alignment="CENTER">
-               <children>
-                  <VBox>
-                     <children>
-                        <Label text="Product Name" />
-                        <TextField fx:id="productNameFilter" />
-                     </children>
-                  </VBox>
-                  <VBox layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="109.0">
-                     <children>
-                        <Label text="Unit" />
-                        <ComboBox fx:id="unitFilter" prefWidth="150.0" styleClass="non-editable" />
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-         </top>
-      </BorderPane>
+        <BorderPane BorderPane.alignment="CENTER">
+            <center>
+                <TableView fx:id="physicalInventoryDetailsTableView" editable="true" stylesheets="@assets/table.css">
+                    <columns>
+                        <TableColumn prefWidth="75.0" text="Product">
+                            <columns>
+                                <TableColumn fx:id="codeCol" prefWidth="75.0" text="Code" />
+                                <TableColumn fx:id="nameCol" prefWidth="75.0" text="Name" />
+                                <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
+                                <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
+                                <TableColumn fx:id="breakdownCol" prefWidth="75.0" text="Packaging" />
+                            </columns>
+                        </TableColumn>
+                        <TableColumn prefWidth="75.0" text="Findings">
+                            <columns>
+                                <TableColumn fx:id="sysCountCol" prefWidth="75.0" style="-fx-background-color: #2E5077; -fx-text-fill: #FFFFFF;" text="System Count" />
+                                <TableColumn fx:id="physCountCol" prefWidth="75.0" style="-fx-background-color: #79D7BE;-fx-text-fill: #FFFFFF;" text="Physical Count" />
+                                <TableColumn fx:id="varianceCol" prefWidth="75.0" style="-fx-background-color: #4DA1A9;-fx-text-fill: #FFFFFF;" text="Variance" />
+                                <TableColumn fx:id="differenceCol" prefWidth="75.0" style="-fx-background-color: #DDA853;-fx-text-fill: #FFFFFF;" text="Difference Cost" />
+                                <TableColumn fx:id="statusCol" prefWidth="75.0" text="Remarks" />
+                                <TableColumn fx:id="offsetMatchCol" prefWidth="75.0" text="Match" />
+                            </columns>
+                        </TableColumn>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </center>
+            <top>
+                <HBox style="-fx-spacing: 10;" BorderPane.alignment="CENTER">
+                    <children>
+                        <VBox>
+                            <children>
+                                <Label text="Product Name" />
+                                <TextField fx:id="productNameFilter" />
+                            </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="109.0">
+                            <children>
+                                <Label text="Unit" />
+                                <ComboBox fx:id="unitFilter" prefWidth="150.0" styleClass="non-editable" />
+                            </children>
+                        </VBox>
+                    </children>
+                </HBox>
+            </top>
+        </BorderPane>
     </center>
     <top>
         <HBox spacing="10.0" BorderPane.alignment="CENTER">
