--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -48,24 +48,16 @@
     /* Circular border radius */
     -fx-background-radius: 30px;
     /* Circular background radius */
-    -fx-padding: 10px;
-    /* Increased padding */
-    -fx-pref-height: 40px;
-    /* Adjust height as needed */
-    -fx-pref-width: 250px;
-    -fx-min-width: 150px;
+    -fx-padding: 5px;
 }
+
+.
+
 .non-editable {
     -fx-background-color:  #fff;
     -fx-border-color: linear-gradient(to right, -var-primary-color, -var-accent-color);
     -fx-border-radius: 30px;
-    /* Circular border radius */
     -fx-background-radius: 30px;
-    /* Increased padding */
-    -fx-pref-height: 40px;
-    /* Adjust height as needed */
-    -fx-pref-width: 250px;
-    -fx-min-width: 150px;
 }
 .text-label {
     -fx-alignment: CENTER;
@@ -82,7 +74,7 @@
     -fx-text-fill: -var-primary-color;
     -fx-border-radius: 40px;
     -fx-background-radius: 30px;
-    -fx-padding: 10px 20px;
+    -fx-padding: 5px 5px;
     -fx-border-color:  #155E98;
     -fx-pref-height: 40px;
     -fx-pref-width: 150px;
@@ -156,6 +148,14 @@
     -fx-padding: 0;
     -fx-background-color: transparent;
     -fx-fill: #155E98;
+}
+
+.grid-pane {
+    -fx-background-color: #f4f4f4;
+    -fx-padding: 5px;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
 }
 
 /* In your CSS file (styles.css for example) */
@@ -310,7 +310,6 @@
 
 .date-picker .arrow-button .arrow {
     -fx-fill: #155E98;
-
 }
 
 /* Custom styles for the DatePicker's popup */
