--- a/src/main/resources/com/vertex/vos/assets/table.css
+++ b/src/main/resources/com/vertex/vos/assets/table.css
@@ -3,7 +3,7 @@
 }
 
 .table-view .column-header .label {
-    -fx-text-background-color: #f0f8ff;
+-fx-text-fill: #f0f8ff;
     -fx-font-weight: bold;
 }
 
@@ -37,7 +37,7 @@
 
 .table-row-cell:odd {
     -fx-background-color: #DCF2FF;
-    -fx-text-background-color: #3E4756;
+    -fx-text-fill: #3E4756; /* Set text color */
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0.0em;
 }
@@ -45,6 +45,7 @@
 .table-row-cell:even {
     -fx-background-color: transparent;
     -fx-background-insets: 0, 0 0 1 0;
+        -fx-text-fill: #3E4756; /* Set text color */
     -fx-padding: 0.0em;
 }
 
@@ -74,7 +75,7 @@
 .table-row-cell:selected {
     -fx-background-color: #155E98;
     -fx-background-radius: 15px;
-    -fx-text-background-color: #f0f8ff;
+    -fx-text-fill: #f0f8ff; /* Ensure selected row text is visible */
 }
 .table-view .table-cell .combo-box {
     -fx-background-color: -var-background-color;
@@ -86,6 +87,11 @@
     -fx-background-color: -var-background-color;
     -fx-text-fill: -var-text-fill;
 }
+.table-cell:focused {
+    -fx-background-color: yellow;
+    -fx-text-fill: black; /* Ensure text is readable */
+}
+
 .align-right {
   -fx-alignment: CENTER-RIGHT;
 }
@@ -95,3 +101,4 @@
 .align-left {
   -fx-alignment: CENTER-LEFT;
 }
+
