--- a/src/main/resources/com/vertex/vos/RemittanceFindingsForm.fxml
+++ b/src/main/resources/com/vertex/vos/RemittanceFindingsForm.fxml
@@ -16,10 +16,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.RemittanceFindingsFormController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.RemittanceFindingsFormController">
    <center>
       <TableView fx:id="collectionDetailsTableView" BorderPane.alignment="CENTER">
          <columns>
+            <TableColumn fx:id="collectionDateCol" prefWidth="75.0" text="Collection Date " />
             <TableColumn fx:id="collectionNoCol" prefWidth="75.0" text="Collection " />
             <TableColumn fx:id="balanceTypeCol" prefWidth="75.0" text="Balance Type" />
             <TableColumn fx:id="coaCol" prefWidth="75.0" text="Chart Of Account" />
@@ -138,6 +139,7 @@
                      <center>
                         <TableView fx:id="collectionSelectionTableView">
                            <columns>
+                              <TableColumn fx:id="collectionDateColSelection" prefWidth="75.0" text="Collection Date" />
                               <TableColumn fx:id="collectionNoColSelection" prefWidth="75.0" text="Collection " />
                               <TableColumn fx:id="balanceTypeColSelection" prefWidth="75.0" text="Balance Type" />
                               <TableColumn fx:id="coaColSelection" prefWidth="75.0" text="Chart Of Account" />
