--- a/src/main/resources/com/vertex/vos/customerRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/customerRegistration.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -385,51 +386,6 @@
                         </Button>
                     </buttons>
                   </ButtonBar>
-                  <BorderPane>
-                     <center>
-                        <TableView fx:id="productListTableView" editable="true">
-                           <columns>
-                              <TableColumn prefWidth="75.0" text="Product">
-                                 <columns>
-                                    <TableColumn fx:id="brandCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Brand" />
-                                    <TableColumn fx:id="categoryCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Category" />
-                                    <TableColumn fx:id="productNameCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="300.0" text="Name" />
-                                    <TableColumn fx:id="productUnitCol" prefWidth="75.0" text="Unit" />
-                                    <TableColumn fx:id="unitPriceCol" prefWidth="150.0" text="Unit Price" />
-                                 </columns>
-                              </TableColumn>
-                              <TableColumn fx:id="discountTypeCol" prefWidth="100.0" text="Discount Type" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </center>
-                     <bottom>
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                          <buttons>
-                              <Label text="*Unlinked products will follow price type of salesman in transact." wrapText="true" />
-                              <Button fx:id="updateButton" layoutX="579.0" layoutY="10.0" mnemonicParsing="false" text="Update" />
-                            <Button fx:id="addButton" mnemonicParsing="false" text="Add Product" />
-                          </buttons>
-                        </ButtonBar>
-                     </bottom>
-                     <top>
-                        <HBox BorderPane.alignment="CENTER">
-                           <children>
-                              <VBox>
-                                 <children>
-                                    <Label text="Discount Type" />
-                                    <ComboBox fx:id="discountTypePerItemComboBox" editable="true" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </top>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </BorderPane>
                </children>
                <padding>
                   <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
@@ -438,4 +394,55 @@
          </content>
       </ScrollPane>
    </center>
+   <bottom>
+      <TitledPane expanded="false" text="Products" BorderPane.alignment="CENTER">
+         <content>
+            <BorderPane>
+               <center>
+                  <TableView fx:id="productListTableView" editable="true">
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="Product">
+                           <columns>
+                              <TableColumn fx:id="brandCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Brand" />
+                              <TableColumn fx:id="categoryCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="150.0" text="Category" />
+                              <TableColumn fx:id="productNameCol" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="300.0" text="Name" />
+                              <TableColumn fx:id="productUnitCol" prefWidth="75.0" text="Unit" />
+                              <TableColumn fx:id="unitPriceCol" prefWidth="150.0" text="Unit Price" />
+                           </columns>
+                        </TableColumn>
+                        <TableColumn fx:id="discountTypeCol" prefWidth="100.0" text="Discount Type" />
+                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </center>
+               <bottom>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <buttons>
+                        <Label text="*Unlinked products will follow price type of salesman in transact." wrapText="true" />
+                        <Button fx:id="updateButton" layoutX="579.0" layoutY="10.0" mnemonicParsing="false" text="Update" />
+                      <Button fx:id="addButton" mnemonicParsing="false" text="Add Product" />
+                    </buttons>
+                  </ButtonBar>
+               </bottom>
+               <top>
+                  <HBox BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Discount Type" />
+                              <ComboBox fx:id="discountTypePerItemComboBox" editable="true" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </top>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </BorderPane>
+         </content>
+      </TitledPane>
+   </bottom>
 </BorderPane>
