--- a/src/main/resources/com/vertex/vos/assets/table.css
+++ b/src/main/resources/com/vertex/vos/assets/table.css
@@ -102,3 +102,105 @@
   -fx-alignment: CENTER-LEFT;
 }
 
+.tree-table-view {
+    -fx-background-color: transparent;
+}
+
+.tree-table-view .column-header .label {
+    -fx-text-fill: #f0f8ff;
+    -fx-font-weight: bold;
+}
+
+.tree-table-view .column-header-background .filler {
+    -fx-background-color: transparent;
+}
+
+.tree-table-view .corner {
+    -fx-background-color: transparent;
+}
+
+.tree-table-view .column-header-background {
+    -fx-background-color: linear-gradient(to bottom, #155E98, #7c9ebb);
+    -fx-background-radius: 7px 7px 0px 0px;
+}
+
+.tree-table-view .column-header {
+    -fx-background-color: transparent;
+}
+
+.tree-table-row-cell:hover .tree-table-cell {
+    -fx-background-color: linear-gradient(to bottom, #155D99, #7c9ebb);
+    -fx-text-background-color: #f0f8ff;
+}
+
+.tree-table-row-cell:odd {
+    -fx-background-color: #DCF2FF;
+    -fx-text-fill: #3E4756;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+.tree-table-row-cell:even {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-text-fill: #3E4756;
+    -fx-padding: 0.0em;
+}
+
+.tree-table-view .virtual-flow .scroll-bar:vertical,
+.tree-table-view .virtual-flow .scroll-bar:vertical .track,
+.tree-table-view .virtual-flow .scroll-bar:vertical .track-background,
+.tree-table-view .virtual-flow .scroll-bar:horizontal,
+.tree-table-view .virtual-flow .scroll-bar:horizontal .track,
+.tree-table-view .virtual-flow .scroll-bar:horizontal .track-background {
+    -fx-background-color: transparent;
+}
+
+.tree-table-view .virtual-flow .scroll-bar .increment-button,
+.tree-table-view .virtual-flow .scroll-bar .decrement-button {
+    -fx-opacity: 0;
+    -fx-padding: 2;
+}
+
+.tree-table-view .virtual-flow .scroll-bar:vertical .thumb {
+    -fx-background-color: linear-gradient(to bottom, #155E98, #7c9ebb);
+}
+
+.tree-table-view .virtual-flow .scroll-bar:horizontal .thumb {
+    -fx-background-color: linear-gradient(to bottom, #155E98, #7c9ebb);
+}
+
+.tree-table-row-cell:selected {
+    -fx-background-color: #155E98;
+    -fx-background-radius: 15px;
+    -fx-text-fill: #f0f8ff;
+}
+
+.tree-table-view .tree-table-cell .combo-box {
+    -fx-background-color: -var-background-color;
+    -fx-padding: 0;
+    -fx-border-color: #d3d3d3;
+    -fx-border-width: 1px;
+}
+
+.tree-table-view .tree-table-cell .combo-box .list-cell {
+    -fx-background-color: -var-background-color;
+    -fx-text-fill: -var-text-fill;
+}
+
+.tree-table-cell:focused {
+    -fx-background-color: yellow;
+    -fx-text-fill: black;
+}
+
+.align-right {
+  -fx-alignment: CENTER-RIGHT;
+}
+
+.align-center {
+  -fx-alignment: CENTER;
+}
+
+.align-left {
+  -fx-alignment: CENTER-LEFT;
+}
